fix multimap usage
cannot get LinkedList functionality from LinkedList multimap